force-app/main/default/objects/Proposal_Funding__c/Proposal_Funding__c.object-meta.xml
<CustomObject>
    <label>Proposal Funding</label>
    <nameField>
        <displayFormat>CFI-{000000}</displayFormat>
        <label>Salesforce Contract Funding ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Fundings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>