force-app/main/default/objects/Proposal_Funding__c/fields/Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID__c</fullName>
    <label>Activity ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>