force-app/main/default/objects/Proposal_Funding__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <formula>Proposal_Site__r.Address_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address 1</label>
    <type>Text</type>
</CustomField>