force-app/main/default/objects/Proposal_Funding__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <formula>Proposal_Site__r.Address_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address 2</label>
    <type>Text</type>
</CustomField>