force-app/main/default/objects/Proposal_Funding__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Need to change the label and the api name of this to County instead of Country</description>
    <formula>TEXT(Proposal_Site__r.County__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County</label>
    <type>Text</type>
</CustomField>