force-app/main/default/objects/Proposal_Funding__c/fields/Distribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Amount__c</fullName>
    <label>Distribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>