force-app/main/default/objects/Proposal_Funding__c/fields/Distribution_Pct__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Pct__c</fullName>
    <defaultValue>TEXT(100)</defaultValue>
    <label>Distribution Pct</label>
    <length>3</length>
    <type>Text</type>
</CustomField>