force-app/main/default/objects/Proposal_Funding__c/fields/NEIS_Contract_Funding_Line_External_Id__c.field-meta.xml
<CustomField>
    <fullName>NEIS_Contract_Funding_Line_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>NEIS Contract Funding Line External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>