force-app/main/default/objects/Proposal_Funding__c/fields/NEIS_Contract_Funding_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>NEIS_Contract_Funding_Line_Number__c</fullName>
    <label>NEIS Contract Funding Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>