force-app/main/default/objects/Proposal_Funding__c/fields/NEIS_Project_Funding_ID__c.field-meta.xml
<CustomField>
    <fullName>NEIS_Project_Funding_ID__c</fullName>
    <label>NEIS Project Funding ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>