force-app/main/default/objects/Proposal_Funding__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <label>Project ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>