force-app/main/default/objects/Proposal_Funding__c/fields/Proposal_Site__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Site</label>
    <referenceTo>Proposal_Site__c</referenceTo>
    <relationshipLabel>Project Fundings</relationshipLabel>
    <relationshipName>Project_Fundings</relationshipName>
    <type>Lookup</type>
</CustomField>