force-app/main/default/objects/Proposal_Funding__c/fields/Salesforce_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Integration_ID__c</fullName>
    <description>18 Digit Salesforce Integration ID</description>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>18 Digit Salesforce Integration ID</inlineHelpText>
    <label>Salesforce Integration ID</label>
    <type>Text</type>
</CustomField>