force-app/main/default/objects/Proposal_Funding__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>