force-app/main/default/objects/Proposal_Funding__c/fields/Solicitation_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_External_Id__c</fullName>
    <label>Solicitation External Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>