force-app/main/default/objects/Proposal_Funding__c/fields/Statewide__c.field-meta.xml
<CustomField>
    <fullName>Statewide__c</fullName>
    <description>S-00403: Statewide field; to be included in csv.</description>
    <formula>&quot;N&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statewide</label>
    <type>Text</type>
</CustomField>