force-app/main/default/objects/Proposal_Funding__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <description>S-00403: System field to be populated at the end of the csv with value of ‘S’ always.</description>
    <formula>&quot;S&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System</label>
    <type>Text</type>
</CustomField>